Update python clientruntime.
This is a combination of 7 commits.
Fixed redirect and retry logic

Corrected project file

Added basic token auth option

Started reworking AAD config

Rename lro_happy_path to lro_test

Added explicit body serialization

Fixed required parameter validation

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodTemplate.cshtml
@@ -78,12 +78,12 @@ else if (Model.IsPagingMethod)
             @:# Construct body
   if (Model.RequestBody.IsRequired)
   {
-            @:body_content = self._serialize(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
+            @:body_content = self._serialize.body(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
   }
   else
   {
             @:if @Model.RequestBody.Name is not None:
-                @:body_content = self._serialize(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
+                @:body_content = self._serialize.body(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
             @:else:
                 @:body_content = None
   }
@@ -178,12 +178,12 @@ else //Long running operations
         @:# Construct body
   if (Model.RequestBody.IsRequired)
   {
-        @:body_content = self._serialize(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
+        @:body_content = self._serialize.body(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
   }
   else
   {
         @:if @Model.RequestBody.Name is not None:
-            @:body_content = self._serialize(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
+            @:body_content = self._serialize.body(@Model.RequestBody.Name, '@(Model.RequestBody.Type.ToPythonRuntimeTypeString())')
         @:else:
             @:body_content = None
   }
