--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -28,6 +28,7 @@ from msrest.exceptions import DeserializationError, HttpOperationError
 @if (Model.ModelTemplateModels.Any())
 {
 @:from . import models
+@:from .models import *
 }
 @EmptyLine
 @EmptyLine
