Azure Python will return bool for HEAD operation.

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodTemplate.cshtml
@@ -245,8 +245,7 @@ else
 }
 else
 {
-            @:if raw:
-                @:return None, response
+            @:@Model.ReturnEmptyResponse
 }
 @EmptyLine
         long_running_operation_timeout = operation_config.get(
