--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
@@ -44,6 +44,7 @@ class @(Model.Name)Configuration(AzureConfiguration):
     def __init__(
             self, @(Model.RequiredConstructorParameters)base_url=None, filepath=None):
 @EmptyLine
+        @Model.ValidateRequiredParameters
         if not base_url:
             base_url = '@Model.BaseUrl'
 @EmptyLine
