--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -50,7 +50,10 @@
   if (!callback) {
     throw new Error('callback cannot be null.');
   }
-
+  @if (((CompositeType)Model.OptionsParameterTemplateModel.Type).Properties.Count > 1)
+  {
+  @:@(Model.BuildOptionalMappings())
+  }
   @if (Model.ParameterTemplateModels.Any())
   {
       var validationBlock = Model.ValidationString;
