Added serialization for flattened resources

--- a/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
@@ -19,6 +19,11 @@
 
   if (Model.ServiceClient.EnumTypes.Any())
   {
-@:from .enums import *
+@:from .enums import (
+    foreach (var enumType in Model.ServiceClient.EnumTypes)
+    {
+@:    @(enumType.Name),
+    }
+@:)
   }
 }
