Use correct way to set __all__ in the __init__.py

--- a/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
@@ -9,29 +9,28 @@
 # --------------------------------------------------------------------------
 @EmptyLine
 @{
-  if (Model.ServiceClient.ModelTypes.Any())
+  foreach (var modelType in Model.ServiceClient.ModelTypes)
   {
-    foreach (var modelType in Model.ServiceClient.ModelTypes)
-    {
 @:from .@(modelType.Name.ToPythonCase()) import @modelType.Name@Model.GetExceptionNameIfExist(modelType)
-    }
-@EmptyLine
-
+  }
   if (Model.ServiceClient.EnumTypes.Any())
   {
-@:from . import enums
+@:from .enums import (
+    foreach (var enumType in @Model.ServiceClient.EnumTypes)
+    {
+    @:@(enumType.Name),
+    }
+    @:)
   }
-
+@EmptyLine
 @:__all__ = [
-    foreach (var modelType in Model.ServiceClient.ModelTypes)
-    {
-@:    @modelType.Name@Model.GetExceptionNameIfExist(modelType),
-    }
-    if (Model.ServiceClient.EnumTypes.Any())
-    {
-@:    enums,
-    }
-@:]
+  foreach (var modelType in Model.ServiceClient.ModelTypes)
+  {
+@:    '@modelType.Name'@Model.GetExceptionNameIfExist(modelType, true),
   }
-
+  foreach (var enumType in @Model.ServiceClient.EnumTypes)
+  {
+@:    '@(enumType.Name)',
+  }
+@:]
 }
