--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
@@ -19,15 +19,15 @@ from msrest.exceptions import (
 )
 @EmptyLine
 from .api_client import @(Model.Name), @(Model.Name)Configuration
-
+@EmptyLine
 __all__ = [
-    ClientException,
-    SerializationError,
-    DeserializationError,
-    TokenExpiredError,
-    ClientRequestError,
-    AuthenticationError,
-    HttpOperationError,
-    @(Model.Name),
-    @(Model.Name)Configuration
+    'ClientException',
+    'SerializationError',
+    'DeserializationError',
+    'TokenExpiredError',
+    'ClientRequestError',
+    'AuthenticationError',
+    'HttpOperationError',
+    '@(Model.Name)',
+    '@(Model.Name)Configuration'
 ]
