--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupInitTemplate.cshtml
@@ -15,10 +15,11 @@
     {
 @:from .@(modelGroupType.MethodGroupType.ToPythonCase()) import @modelGroupType.MethodGroupType
     }
+@EmptyLine
 @:__all__ = [
     foreach (var modelGroupType in Model.MethodGroupModels)
     {
-@:    @modelGroupType.MethodGroupType,
+@:    '@modelGroupType.MethodGroupType',
     }
 @:]
   }
