--- a/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
@@ -47,19 +47,22 @@ else
 @EmptyLine
     @:_required = [@requiredStr]
 }
-@EmptyLine
-    _attribute_map = {
 @{
   var propertyList = new List<Property>(Model.Properties);
-  if (propertyList.Count > 0)
+  if (!Model.IsParameterGroup)
   {
-    for (int i = 0; i < propertyList.Count; i++) 
+@EmptyLine
+    @:_attribute_map = {
+    if (propertyList.Count > 0)
     {
+      for (int i = 0; i < propertyList.Count; i++) 
+      {
         @:@(ModelTemplateModel.InitializePythonProperty(propertyList[i]))
+      }
     }
+    @:}
   }
 }
-    }
 @if (Model.SubModelTypes.Any())
 {
 <text>
