Update client runtime for bug fixes.
Changed raw workflow and CloudError

Moved China auth configuration

Added file stream raw tests

Use new ClientRawResponse to handle raw response

msrestazure tox cleanup

Added msrestazure tests

Client will deserialize the header in raw mode.

fixed unicode compatibility (basestring)

Fixed failed cookie retry

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureMethodGroupTemplate.cshtml
@@ -8,6 +8,7 @@
 # --------------------------------------------------------------------------
 @EmptyLine
 from msrest.service_client import async_request
+from msrest.pipeline import ClientRawResponse
 @if (Model.HasAnyDefaultExceptions)
 {
 @:from msrest.exceptions import HttpOperationError
