--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -16,6 +16,7 @@ from msrest import Configuration, Serializer, Deserializer
 {
 <text>
 from msrest.service_client import async_request
+from msrest.pipeline import ClientRawResponse
 </text>
 }
 @if (Model.MethodGroupModels.Any())
