--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
@@ -9,6 +9,7 @@
 # --------------------------------------------------------------------------
 @EmptyLine
 from msrest.service_client import async_request
+from msrest.pipeline import ClientRawResponse
 @if (Model.HasAnyDefaultExceptions)
 {
 @:from msrest.exceptions import HttpOperationError
