--- a/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
@@ -115,12 +115,12 @@ else
     {
             @:deserialized = self._deserialize('@responsePair.Value.Body.ToPythonRuntimeTypeString()', response)
     }
-            @*Model.AddIndividualResponseHeader()*@
+            @:@Model.AddIndividualResponseHeader(responsePair.Key)
   }
 @EmptyLine
         @:if raw:
             @:client_raw_response = ClientRawResponse(deserialized, response)
-            @Model.AddResponseHeader()
+            @:@Model.AddResponseHeader()
             @:return client_raw_response
 @EmptyLine
         @:return deserialized
