Updated user-agent config
User can use custom setting "Version" to override the "ApiVersion" for SDK version.

--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureModelInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureModelInitTemplate.cshtml
@@ -16,7 +16,7 @@
     {
       continue;
     }
-@:from .@(modelType.Name.ToPythonCase()) import @modelType.Name@Model.GetExceptionNameIfExist(modelType)
+@:from .@(modelType.Name.ToPythonCase()) import @modelType.Name@Model.GetExceptionNameIfExist(modelType, false)
   }
   foreach (var pagedName in Model.PagedClasses)
   {
