--- a/AutoRest/Generators/Python/Python/Templates/SetupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/SetupTemplate.cshtml
@@ -12,7 +12,7 @@
 from setuptools import setup, find_packages
 @EmptyLine
 NAME = "@(Model.Name.ToPythonCase())"
-VERSION = "1.0.0"
+VERSION = "@Model.Version"
 @EmptyLine
 # To install the library, run the following
 #
