--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzurePagingMethodTemplate.cshtml
@@ -104,7 +104,7 @@ else
 @EmptyLine
         # Deserialize response
         deserialized = @(Model.PagedResponseClassName)(response, internal_paging, self._deserialize.dependencies)
-        @Model.AddIndividualResponseHeader()
+        @Model.AddIndividualResponseHeader(null)
 @EmptyLine
         if raw:
             client_raw_response = ClientRawResponse(deserialized, response)
