--- a/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Azure.Python/Templates/AzureServiceClientTemplate.cshtml
@@ -51,6 +51,8 @@ class @(Model.Name)Configuration(AzureConfiguration):
             base_url = '@Model.BaseUrl'
 @EmptyLine
         super(@(Model.Name)Configuration, self).__init__(base_url, filepath)
+@EmptyLine
+        self.user_agent = '@Model.UserAgent'
 @if (Model.Properties.Any())
 {
 @EmptyLine
