Decorate the Impls final

--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
@@ -22,7 +22,7 @@ package @(Settings.Namespace.ToLower());
  * An instance of this class provides access to all the operations defined
  * in @(Model.MethodGroupType).
  */
-public class @(Model.MethodGroupType)Impl implements @Model.MethodGroupType {
+public final class @(Model.MethodGroupType)Impl implements @Model.MethodGroupType {
     /** The Retrofit service to perform REST calls. */
     private @Model.MethodGroupServiceType service;
     /** The service client containing this operation class. */
