Added support for generic file stream in C#

--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -112,20 +112,32 @@ public async Task<@(Model.OperationResponseReturnTypeString)> @(Model.Name)WithH
     _httpRequest.Content.Headers.ContentType = MediaTypeHeaderValue.Parse("@(Model.ContentType)");
         </text>
     }
-    else if (Model.FormData != null)
+    else if (Model.RequestFile != null)
     {
         <text>
     // Serialize Request    
-    StreamContent _fileStreamContent = new StreamContent(@(Model.FormData.Name));
-    _fileStreamContent.Headers.ContentDisposition = new ContentDispositionHeaderValue("form-data")
-	    {
-	        Name = "\"fileUpload\"",
-	        FileName = "\"" + @(Model.FormDataFileName == null ? "\"" + Model.FormData.Name + "\"" : Model.FormDataFileName.Name) + "\""
-	    };
+    StreamContent _fileStreamContent = new StreamContent(@(Model.RequestFile.Name));
+    @if (Model.RequestFile.Location == ParameterLocation.FormData)
+    {
+    @:ContentDispositionHeaderValue _contentDispositionHeaderValue = new ContentDispositionHeaderValue("form-data");
+    @:_contentDispositionHeaderValue.Name = "\"fileUpload\"";
+    }
+    else
+    {
+    @:ContentDispositionHeaderValue _contentDispositionHeaderValue = new ContentDispositionHeaderValue("attachment")
+    }
+    _contentDispositionHeaderValue.FileName = "\"" + @(Model.RequestFileName) + "\"";
     _fileStreamContent.Headers.ContentType = new MediaTypeHeaderValue("application/octet-stream"); 
-    var _multiPartContent = new MultipartFormDataContent(); 
-    _multiPartContent.Add(_fileStreamContent);
-    _httpRequest.Content = _multiPartContent; 
+    @if (Model.RequestFile.Location == ParameterLocation.FormData)
+    {
+    @:var _multiPartContent = new MultipartFormDataContent(); 
+    @:_multiPartContent.Add(_fileStreamContent);
+    @:_httpRequest.Content = _multiPartContent; 
+    }
+    else
+    {
+    @:_httpRequest.Content = _fileStreamContent;
+    }
         </text>
     }
 
