--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupInterfaceTemplate.cshtml
@@ -76,7 +76,7 @@ public interface @Model.MethodGroupType {
     @: * @@return the ServiceResponse object if successful.
     }
     @: */
-    @:ServiceResponse<@method.GenericReturnTypeString> @(method.Name)(@method.MethodParameterDeclaration) throws @method.Exceptions;
+    @:ServiceResponse<@method.GenericReturnTypeString> @(method.Name)(@method.MethodParameterDeclaration) throws @method.ExceptionString;
     @EmptyLine
     @:/**
     if (!String.IsNullOrEmpty(method.Summary))
